Fix missing dash in docker-compose

--- a/tutorial/clojure/13_start_a_local_instance_of_postgresql.html
+++ b/tutorial/clojure/13_start_a_local_instance_of_postgresql.html
@@ -71,7 +71,7 @@ an audience that loves their Datomics and XTDBs, but the rest of this is focused
 data</pre></code>
     </li>
     <li>
-        <h2>Run <code>docker compose up -d</code></h2>
+        <h2>Run <code>docker-compose up -d</code></h2>
         <p>This should download start up postgres in the background.</p>
     </li>
 </ul>
