Fix typo in justfile code

--- a/site/tutorial/clojure/3_start_an_nrepl_server.html
+++ b/site/tutorial/clojure/3_start_an_nrepl_server.html
@@ -82,7 +82,7 @@ help:
     just --list
 
 run:
-    clojure -M -m main
+    clojure -M -m example.main
 
 nrepl:
     clojure -M:nREPL -m nrepl.cmdline</pre
