--- a/site/tutorial/clojure/7_pick_a_handler_based_on_route.html
+++ b/site/tutorial/clojure/7_pick_a_handler_based_on_route.html
@@ -44,7 +44,7 @@
 
 <p>They have a "method" (POST, GET, PUT, ETC), some headers (key value pairs of info), a body (where the juice is),
     and a route.</p>
-<p>In the image the route is <code>/create-page</code>. It's very common to want to have your server do different
+<p>In the image the route is <code>/create_page</code>. It's very common to want to have your server do different
     things when you get requests on different routes.</p>
 <ul>
     <li>
