--- a/site/tutorial/clojure/10_format_your_code.html
+++ b/site/tutorial/clojure/10_format_your_code.html
@@ -54,7 +54,7 @@
         metosin/reitit-ring {:mvn/version "0.7.2"}
         org.clojure/tools.logging {:mvn/version "1.3.0"}
         org.slf4j/slf4j-simple {:mvn/version "2.0.16"}
-        hiccup/hiccup {:mvn/version "2.0.0-RC3"}}
+        hiccup/hiccup {:mvn/version "2.0.0"}}
  :aliases {:nREPL
             {:extra-paths ["dev"]
              :extra-deps
