--- a/site/tutorial/clojure/12_run_tests.html
+++ b/site/tutorial/clojure/12_run_tests.html
@@ -50,7 +50,7 @@
         metosin/reitit-ring {:mvn/version "0.7.2"}
         org.clojure/tools.logging {:mvn/version "1.3.0"}
         org.slf4j/slf4j-simple {:mvn/version "2.0.16"}
-        hiccup/hiccup {:mvn/version "2.0.0-RC3"}}
+        hiccup/hiccup {:mvn/version "2.0.0"}}
  :aliases {<span style="font-weight: bold;">:dev {:extra-paths ["dev"]
                  :extra-deps {nrepl/nrepl {:mvn/version "1.3.0"}}}</span>
            :format {:deps {dev.weavejester/cljfmt {:mvn/version "0.15.3"}}}
@@ -83,7 +83,7 @@ run:
         metosin/reitit-ring {:mvn/version "0.7.2"}
         org.clojure/tools.logging {:mvn/version "1.3.0"}
         org.slf4j/slf4j-simple {:mvn/version "2.0.16"}
-        hiccup/hiccup {:mvn/version "2.0.0-RC3"}}
+        hiccup/hiccup {:mvn/version "2.0.0"}}
  :aliases {:dev {:extra-paths ["dev" <span style="font-weight: bold;">"test"</span>]
                  :extra-deps {nrepl/nrepl {:mvn/version "1.3.0"}
                               <span style="font-weight: bold;">lambdaisland/kaocha {:mvn/version "1.91.1392"}</span>}}
