--- a/site/tutorial/clojure/25_document_your_dependencies.html
+++ b/site/tutorial/clojure/25_document_your_dependencies.html
@@ -62,7 +62,7 @@
         <span style="font-weight: bold;">;; Logging Implementation</span>
         org.slf4j/slf4j-simple {:mvn/version "2.0.16"}
         <span style="font-weight: bold;">;; HTML Generation</span>
-        hiccup/hiccup {:mvn/version "2.0.0-RC3"}
+        hiccup/hiccup {:mvn/version "2.0.0"}
         <span style="font-weight: bold;">;; Database Queries</span>
         com.github.seancorfield/next.jdbc {:mvn/version "1.3.1070"}
         <span style="font-weight: bold;">;; Postgres Driver</span>
