--- a/site/tutorial/clojure/9_render_html.html
+++ b/site/tutorial/clojure/9_render_html.html
@@ -55,7 +55,7 @@
         metosin/reitit-ring {:mvn/version "0.7.2"}
         org.clojure/tools.logging {:mvn/version "1.3.0"}
         org.slf4j/slf4j-simple {:mvn/version "2.0.16"}
-        <span style="font-weight: bold;">hiccup/hiccup {:mvn/version "2.0.0-RC3"}</span>}
+        <span style="font-weight: bold;">hiccup/hiccup {:mvn/version "2.0.0"}</span>}
  :aliases {:nREPL
             {:extra-paths ["dev"]
              :extra-deps
