--- a/site/tutorial/clojure/13_start_a_local_instance_of_postgresql.html
+++ b/site/tutorial/clojure/13_start_a_local_instance_of_postgresql.html
@@ -53,7 +53,7 @@
                 <code>./data/db</code>.</p>
             <code><pre>services:
   postgres:
-    image: postgres:17
+    image: postgres:18
     restart: unless-stopped
     env_file: ".env"
     healthcheck:
@@ -64,7 +64,7 @@
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - ./data/db:/var/lib/postgresql
     ports:
       - '5432:5432'</pre>
             </code>
